website/websites/u64q/code/templates.1.pyston.log

 Mon, 25 Jan 2021 21:43:31 GMT

COMMAND LINE:
 /usr/bin/pyston templates.pyston 1000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "templates.pyston", line 35
    print res
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(res)?
